[tool.poetry]
name = "weather-chat-ai"
version = "0.1.0"
description = ""
authors = ["Matt Florence <matt@mattflo.com>"]
readme = "README.md"
packages = [{ include = "weather_chat_ai" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "~0.0.0"
chainlit = "~0"
pytz = "^2023.3"
openai = "^0.27.9"
structlog = "^23.2.0"
aiohttp = "^3.8.6"
sentry-sdk = "^1.34.0"
langchain-together = "^0.0.2.post1"
langchain-mistralai = "^0.0.3"
fireworks-ai = "^0.11.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "~0.0.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-watch = "^4.2.0"
pytest-notifier = "^1.0.4"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
isort = "^5.12.0"
autoflake = "^2.2.1"
rich = "^13.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["focus"]
